--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "@types/node": "^14.0.11",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
+    "mobx": "^5.15.4",
+    "mobx-react-lite": "^2.0.7",
+    "mobx-state-tree": "^3.16.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
